[Touch:1431]Update docs to cover the additions for AU CPI.

--- a/Docs/UserGuide/allowablevalues.tex
+++ b/Docs/UserGuide/allowablevalues.tex
@@ -47,6 +47,9 @@
 \emph{ThirdWednesday}   &   All dates but effective date and
                           termination date are taken to be on the
                           third Wednesday of their month (with forward calculation.) \\ \hline
+\emph{LastWednesday}   &   All dates but effective date and
+                          termination date are taken to be on the
+                          last Wednesday of their month (with forward calculation.) \\ \hline
 \emph{ThirdThursday}   &   All dates but effective date and
                           termination date are taken to be on the
                           third Thursday of their month (with forward calculation.) \\ \hline
