--- a/Docs/UserGuide/conventions.tex
+++ b/Docs/UserGuide/conventions.tex
@@ -70,7 +70,7 @@ tenor. If not provided, this defaults to 0.
 \item SpotCalendar [Optional]: The calendar to use for business days when applying the \lstinline!SpotLag!. If not
 provided, it defaults to a calendar with no holidays.
 \item RollConvention [Optional]: The roll convention to use when applying the zero rate tenor. If not provided, it
-defaults to Following (Choices are {\em Backward, Forward, Zero, ThirdWednesday, Twentieth, TwentiethIMM, CDS, ThirdThursday, ThirdFriday, MondayAfterThirdFriday, TuesdayAfterThirdFriday}).
+defaults to Following (Choices are {\em Backward, Forward, Zero, ThirdWednesday, Twentieth, TwentiethIMM, CDS, ThirdThursday, ThirdFriday, MondayAfterThirdFriday, TuesdayAfterThirdFriday, LastWednesday}).
 \item EOM [Optional]: Whether or not to use the end of month convention when applying the zero rate tenor. If not
 provided, it defaults to false.
 \end{itemize}
@@ -536,28 +536,24 @@ SettlementDays above.
 \item FlatIndexIsResettable [Optional]: \emph{True} if it is the notional on the leg paying the flat index that resets, and \emph{False} otherwise. If not provided, it defaults to \emph{True}.
 \end{itemize}
 
-%- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-\subsubsection{Inflation Conventions}
-%- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-
-A node with name \emph{InflationSwap} is used to store conventions for zero or year on year inflation swap quotes. The
-structure of this node is shown in Listing \ref{lst:inflation_conventions}
+\subsubsection{Inflation Swap Conventions}
+A node with name \lstinline!InflationSwap! is used to store conventions for zero or year on year inflation swap quotes. The structure of this node is shown in Listing \ref{lst:inflation_conventions}
 
 \begin{listing}[H]
 %\hrule\medskip
 \begin{minted}[fontsize=\footnotesize]{xml}
-  <InflationSwap>
-      <Id>EUHICPXT_INFLATIONSWAP</Id>
-      <FixCalendar>TARGET</FixCalendar>
-      <FixConvention>MF</FixConvention>
-      <DayCounter>30/360</DayCounter>
-      <Index>EUHICPXT</Index>
-      <Interpolated>false</Interpolated>
-      <ObservationLag>3M</ObservationLag>
-      <AdjustInflationObservationDates>false</AdjustInflationObservationDates>
-      <InflationCalendar>TARGET</InflationCalendar>
-      <InflationConvention>MF</InflationConvention>
-  </InflationSwap>
+<InflationSwap>
+  <Id>EUHICPXT_INFLATIONSWAP</Id>
+  <FixCalendar>TARGET</FixCalendar>
+  <FixConvention>MF</FixConvention>
+  <DayCounter>30/360</DayCounter>
+  <Index>EUHICPXT</Index>
+  <Interpolated>false</Interpolated>
+  <ObservationLag>3M</ObservationLag>
+  <AdjustInflationObservationDates>false</AdjustInflationObservationDates>
+  <InflationCalendar>TARGET</InflationCalendar>
+  <InflationConvention>MF</InflationConvention>
+</InflationSwap>
 \end{minted}
 \caption{Inflation swap conventions}
 \label{lst:inflation_conventions}
@@ -566,16 +562,54 @@ structure of this node is shown in Listing \ref{lst:inflation_conventions}
 The meaning of the elements is as follows:
 
 \begin{itemize}
-\item FixCalendar: The calendar for the fixed rate leg of the swap.
-\item FixConvention: The rolling convention for the fixed rate leg of the swap.
-\item DayCounter: The payoff / coupon day counter (applied to both legs).
-\item Index: The underlying inflation index.
-\item Interpolated: Flag indicating interpolation of the index in the swap's payoff calculation.
-\item ObservationLag: The index observation lag to be applied.
-\item AdjustInfObsDates: Flag indicating whether index observation dates should be adjusted or not.
-\item InfCalendar: The calendar for the inflation leg of the swap.
-\item InfConvention: The rolling convention for the inflation leg of the swap.
+\item \lstinline!FixCalendar!: The calendar for the fixed rate leg of the swap.
+\item \lstinline!FixConvention!: The rolling convention for the fixed rate leg of the swap.
+\item \lstinline!DayCounter!: The payoff or coupon day counter, applied to both legs.
+\item \lstinline!Index!: The underlying inflation index.
+\item \lstinline!Interpolated!: Flag indicating interpolation of the index in the swap's payoff calculation.
+\item \lstinline!ObservationLag!: The index observation lag to be applied.
+\item \lstinline!AdjustInflationObservationDates!: Flag indicating whether index observation dates should be adjusted or not.
+\item \lstinline!InflationCalendar!: The calendar for the inflation leg of the swap.
+\item \lstinline!InflationConvention!: The rolling convention for the inflation leg of the swap.
+
+\item \lstinline!PublicationRoll!:
+This is an optional node taking the values \lstinline!None!, \lstinline!OnPublicationDate! or \lstinline!AfterPublicationDate!. If omitted, the value \lstinline!None! is used. Currently, our only known use case for a value other than \lstinline!None! is for Australian zero coupon inflation indexed swaps (ZCIIS). Here, the index is published quarterly on the last Wednesday of the month following the end of the reference quarter. The start date and maturity date of the market quoted ZCIIS roll to the next quarterly date after the publication date of the index. For example, the AU CPI value for Q3 2020, i.e.\ 1 Jul 2020 to 30 Sep 2020 was released on 28 Oct 2020. On 27 Oct 2020, before the index publication date, the market 5Y ZCIIS would start on 15 Sep 2020 and end on 15 Sep 2025 and reference the Q2 inflation index value. On 29 Oct 2020, after the index publication date, the market 5Y ZCIIS would start on 15 Dec 2020 and end on 15 Dec 2025 and reference the Q3 inflation index value. On the release date, i.e. 28 Oct 2020, the market ZCIIS that is set up is determined by whether the \lstinline!PublicationRoll! value is \lstinline!OnPublicationDate! or \lstinline!AfterPublicationDate!. If it is set to \lstinline!OnPublicationDate!, the swap rolls on this date and hence the market 5Y ZCIIS would start on 15 Dec 2020 and end on 15 Dec 2025 and reference the Q3 inflation index value. If it is set to \lstinline!AfterPublicationDate!, the swap does not roll on the publication date and instead rolls on the next day, and hence the market 5Y ZCIIS would start on 15 Sep 2020 and end on 15 Sep 2025 and reference the Q2 inflation index value. The publication schedule for the index must be provided in the \lstinline!PublicationSchedule! node if \lstinline!PublicationRoll! is not \lstinline!None!. An example of the AU CPI conventions set up is given in Listing \ref{lst:aucpi_inflation_conventions}.
+
+\item \lstinline!PublicationSchedule!:
+This is an optional node and is not used if \lstinline!PublicationRoll! is \lstinline!None!. If \lstinline!PublicationRoll! is not \lstinline!None!, it must be provided and gives the publication dates for the inflation index. The node fields are the same fields that are described in the Section \ref{ss:schedule_data}, i.e.\ they are \lstinline!ScheduleData! elements. An example of the AU CPI conventions set up is given in Listing \ref{lst:aucpi_inflation_conventions}. The \lstinline!PublicationSchedule! must cover the dates on which you intend to perform valuations, i.e. the first publication schedule date must be less than the smallest valuation date that you intend to use and the last publication schedule date must be greater than the largest valuation date that you intend to use.
+
 \end{itemize}
+
+\begin{listing}[H]
+\begin{minted}[fontsize=\footnotesize]{xml}
+<InflationSwap>
+  <Id>AUCPI_INFLATIONSWAP</Id>
+  <FixCalendar>AUD</FixCalendar>
+  <FixConvention>F</FixConvention>
+  <DayCounter>30/360</DayCounter>
+  <Index>AUCPI</Index>
+  <Interpolated>false</Interpolated>
+  <ObservationLag>3M</ObservationLag>
+  <AdjustInflationObservationDates>false</AdjustInflationObservationDates>
+  <InflationCalendar>AUD</InflationCalendar>
+  <InflationConvention>F</InflationConvention>
+  <PublicationRoll>AfterPublicationDate</PublicationRoll>
+  <PublicationSchedule>
+    <Rules>
+      <StartDate>2001-01-24</StartDate>
+      <EndDate>2030-01-30</EndDate>
+      <Tenor>3M</Tenor>
+      <Calendar>AUD</Calendar>
+      <Convention>Preceding</Convention>
+      <TermConvention>Unadjusted</TermConvention>
+      <Rule>LastWednesday</Rule>
+    </Rules>
+  </PublicationSchedule>
+</InflationSwap>
+\end{minted}
+\caption{AU CPI inflation swap conventions}
+\label{lst:aucpi_inflation_conventions}
+\end{listing}
 
 %- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 \subsubsection{CMS Spread Option Conventions}
