--- a/Docs/UserGuide/tradedata/capfloor.tex
+++ b/Docs/UserGuide/tradedata/capfloor.tex
@@ -29,6 +29,9 @@ instruments is exactly opposite to \ref{ss:floatingleg_data}.
   <Caps>
     <Cap>0.05</Cap>
   </Caps>
+  <PremiumAmount>1000</PremiumAmount>
+  <PremiumCurrency>EUR</PremiumCurrency>
+  <PremiumPayDate>2021-01-27</PremiumPayDate>
 </CapFloorData>
 \end{minted}
 \caption{Cap/Floor data}
@@ -68,5 +71,17 @@ The meanings and allowable values of the elements in the \lstinline!CapFloorData
 
   Allowable values for each \lstinline!Floor! element: Any real number. The rate is expressed in decimal form, eg 0.05 is
   a rate of 5\%
+
+\item PremiumAmount [Optional]: Option premium amount paid by the option buyer to the option seller.
+
+Allowable values:  Any positive real number.
+
+\item PremiumCurrency [Optional]: Currency of the option premium.
+
+Allowable values:  See \lstinline!Currency! in Table \ref{tab:allow_stand_data}.
+
+\item PremiumPayDate [Optional]: Date of the option premium payment.
+
+Allowable values:  See \lstinline!Date! in Table \ref{tab:allow_stand_data}.
 
 \end{itemize}
