--- a/Docs/UserGuide/tradecomponents/floatinglegdata.tex
+++ b/Docs/UserGuide/tradecomponents/floatinglegdata.tex
@@ -242,7 +242,7 @@ If the entire {\tt <Gearings>} section is omitted, it defaults to a gearing of \
 
 \item NakedOption [Optional]: Optional node, if \emph{true} the leg represents only the embedded floor, cap or collar.
   By convention the embedded floor (or cap) are considered long if the leg is a receiver leg, otherwise short. For a
-  collar the floor is long and the cap is short if the leg is a receiver leg. Notice that this is exactly opposite to
+  collar the floor is long and the cap is short if the leg is a receiver leg. Notice that this is opposite to
   the definition of a collar in \ref{ss:capfloor}.
 
  Allowable values: \emph{true}, \emph{false} . Defaults to \emph{false} if left blank or omitted.
