BOE base rate added

--- a/Docs/UserGuide/allowablevalues.tex
+++ b/Docs/UserGuide/allowablevalues.tex
@@ -216,7 +216,7 @@ CCY-INDEX                &
                            \textit{\begin{tabular}[c]{@{}l@{}}
 EUR-EONIA\\ EUR-ESTER \\ EUR-EURIBOR\\ EUR-LIBOR\\ EUR-CMS\\
 USD-FedFunds\\ USD-SOFR \\ USD-Prime\\ USD-LIBOR\\ USD-SIFMA\\ USD-CMS\\
-GBP-SONIA\\ GBP-LIBOR\\ GBP-CMS\\ 
+GBP-SONIA\\ GBP-LIBOR\\ GBP-CMS \\ GBP-BOEBaseRate \\ 
 JPY-LIBOR\\ JPY-TIBOR \\ JPY-EYTIBOR \\ JPY-TONAR \\ JPY-CMS \\
 CHF-LIBOR\\ CHF-SARON\\ 
 AUD-LIBOR\\ AUD-BBSW\\ 
