--- a/Docs/UserGuide/tradecomponents/legdatanotionals.tex
+++ b/Docs/UserGuide/tradecomponents/legdatanotionals.tex
@@ -215,6 +215,8 @@ outlined in section \ref{ss:floatingleg_data} Floating Leg Data and Spreads.
   outlined in section \ref{ss:cashflowlegdata}.
 \item CMSLegData: This trade component sub-node is required if \lstinline!LegType! is set to \emph{CMS}. It is
   outlined in section \ref{ss:cmslegdata}.
+\item DurationAdjustedCMSLegData: This trade component sub-node is required if \lstinline!LegType! is set to \emph{DurationAdjustedCMS}. It is
+  outlined in section \ref{ss:duration_adjusted_cmslegdata}.  
 \item CMSSpreadLegData: This trade component sub-node is required if \lstinline!LegType! is set to \emph{CMSSpread}. It is
   outlined in section \ref{ss:cmsspreadlegdata}.
 \item DigitalCMSSpreadLegData: This trade component sub-node is required if \lstinline!LegType! is set to \emph{DigitalCMSSpread}. It is
