--- a/Docs/UserGuide/allowablevalues.tex
+++ b/Docs/UserGuide/allowablevalues.tex
@@ -214,7 +214,7 @@
 \textbf{Index Component} & \textbf{Allowable Values}                                                                                                                                                                                                                                                           \\ \hline
 CCY-INDEX                &
                            \textit{\begin{tabular}[c]{@{}l@{}}
-EUR-EONIA\\ EUR-ESTER%, EUR-ESTR, EUR-STR 
+EUR-EONIA\\ EUR-ESTER, EUR-ESTR, EUR-STR 
 \\ EUR-EURIBOR\\ EUR-LIBOR\\ EUR-CMS\\
 USD-FedFunds\\ USD-SOFR \\ USD-Prime\\ USD-LIBOR\\ USD-SIFMA\\ USD-CMS\\
 GBP-SONIA\\ GBP-LIBOR\\ GBP-CMS \\ GBP-BOEBaseRate \\ 
